@@ -13,10 +13,21 @@ import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Stream;
 
-import static com.weedow.schemaorg.generator.model.handler.ModelHandlerTestUtils.*;
+import static com.weedow.schemaorg.generator.model.handler.ModelHandlerTestUtils.comment;
+import static com.weedow.schemaorg.generator.model.handler.ModelHandlerTestUtils.domainInclude;
+import static com.weedow.schemaorg.generator.model.handler.ModelHandlerTestUtils.label;
+import static com.weedow.schemaorg.generator.model.handler.ModelHandlerTestUtils.partOf;
+import static com.weedow.schemaorg.generator.model.handler.ModelHandlerTestUtils.rangeInclude;
+import static com.weedow.schemaorg.generator.model.handler.ModelHandlerTestUtils.source;
+import static com.weedow.schemaorg.generator.model.handler.ModelHandlerTestUtils.supersededBy;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -41,12 +52,12 @@ class PropertyModelHandlerImplTest {
 
         GraphItem graphItem = mock(GraphItem.class);
         when(graphItem.getId()).thenReturn("schema:MyProperty");
-        when(graphItem.getRangeIncludes()).thenReturn(List.of(rangeInclude("schema:Text")));
+        when(graphItem.getRangeIncludes()).thenReturn(Arrays.asList(rangeInclude("schema:Text")));
         when(graphItem.getLabel()).thenReturn(label("en", "myProperty"));
         when(graphItem.getComment()).thenReturn(comment("en", "This is my Property"));
-        when(graphItem.getPartOf()).thenReturn(List.of(partOf("https://pending.schema.org")));
-        when(graphItem.getSource()).thenReturn(List.of(source("https://github.com/schemaorg/schemaorg/issues/2373")));
-        when(graphItem.getDomainIncludes()).thenReturn(List.of(domainInclude("schema:MyType")));
+        when(graphItem.getPartOf()).thenReturn(Arrays.asList(partOf("https://pending.schema.org")));
+        when(graphItem.getSource()).thenReturn(Arrays.asList(source("https://github.com/schemaorg/schemaorg/issues/2373")));
+        when(graphItem.getDomainIncludes()).thenReturn(Arrays.asList(domainInclude("schema:MyType")));
 
         modelHandler.handle(schemaDefinitions, graphItem);
         Assertions.assertThat(schemaDefinitions).isNotEmpty().containsOnlyKeys("schema:Text", "schema:MyType");
@@ -88,38 +99,38 @@ class PropertyModelHandlerImplTest {
         Assertions.assertThat(properties)
                 .extracting("id", "field.name", "field.fieldName", "types")
                 .containsExactly(
-                        Tuple.tuple("schema:MyProperty", "myProperty", "myProperty", List.of(schemaDefinitions.get("schema:Text")))
+                        Tuple.tuple("schema:MyProperty", "myProperty", "myProperty", Arrays.asList(schemaDefinitions.get("schema:Text")))
                 );
         Assertions.assertThat(properties)
                 .extracting("accessor")
                 .extracting("name", "fieldName", "getterMethod", "description", "partOf", "source", "fieldTypeLinks", "returnFieldType", "cast")
                 .containsExactly(
-                        Tuple.tuple("myProperty", "myProperty", "getMyPropertyList", "This is my Property", List.of("https://pending.schema.org"), List.of("https://github.com/schemaorg/schemaorg/issues/2373"), "{@link null}", null, null)
+                        Tuple.tuple("myProperty", "myProperty", "getMyPropertyList", "This is my Property", Arrays.asList("https://pending.schema.org"), Arrays.asList("https://github.com/schemaorg/schemaorg/issues/2373"), "{@link null}", null, null)
                 );
         Assertions.assertThat(properties)
                 .flatExtracting("mutators")
                 .extracting("name", "fieldName", "setterMethod", "description", "partOf", "source", "paramType", "paramValue")
                 .containsExactly(
-                        Tuple.tuple("myProperty", "myProperty", "setMyProperty", "This is my Property", List.of("https://pending.schema.org"), List.of("https://github.com/schemaorg/schemaorg/issues/2373"), null, "myProperty")
+                        Tuple.tuple("myProperty", "myProperty", "setMyProperty", "This is my Property", Arrays.asList("https://pending.schema.org"), Arrays.asList("https://github.com/schemaorg/schemaorg/issues/2373"), null, "myProperty")
                 );
 
         Set<Property> allProperties = myType.getAllProperties();
         Assertions.assertThat(allProperties)
                 .extracting("id", "field.name", "field.fieldName", "types")
                 .containsExactly(
-                        Tuple.tuple("schema:MyProperty", "myProperty", "myProperty", List.of(schemaDefinitions.get("schema:Text")))
+                        Tuple.tuple("schema:MyProperty", "myProperty", "myProperty", Arrays.asList(schemaDefinitions.get("schema:Text")))
                 );
         Assertions.assertThat(allProperties)
                 .extracting("accessor")
                 .extracting("name", "fieldName", "getterMethod", "description", "partOf", "source", "fieldTypeLinks", "returnFieldType", "cast")
                 .containsExactly(
-                        Tuple.tuple("myProperty", "myProperty", "getMyPropertyList", "This is my Property", List.of("https://pending.schema.org"), List.of("https://github.com/schemaorg/schemaorg/issues/2373"), "{@link null}", null, null)
+                        Tuple.tuple("myProperty", "myProperty", "getMyPropertyList", "This is my Property", Arrays.asList("https://pending.schema.org"), Arrays.asList("https://github.com/schemaorg/schemaorg/issues/2373"), "{@link null}", null, null)
                 );
         Assertions.assertThat(allProperties)
                 .flatExtracting("mutators")
                 .extracting("name", "fieldName", "setterMethod", "description", "partOf", "source", "paramType", "paramValue")
                 .containsExactly(
-                        Tuple.tuple("myProperty", "myProperty", "setMyProperty", "This is my Property", List.of("https://pending.schema.org"), List.of("https://github.com/schemaorg/schemaorg/issues/2373"), null, "myProperty")
+                        Tuple.tuple("myProperty", "myProperty", "setMyProperty", "This is my Property", Arrays.asList("https://pending.schema.org"), Arrays.asList("https://github.com/schemaorg/schemaorg/issues/2373"), null, "myProperty")
                 );
     }
 
@@ -137,9 +148,9 @@ class PropertyModelHandlerImplTest {
 
     private static Stream<Arguments> supports() {
         return Stream.of(
-                Arguments.of(List.of("rdf:Property"), true),
-                Arguments.of(List.of("rdf:Property", "rdfs:Class"), true),
-                Arguments.of(List.of("rdfs:Class"), false)
+                Arguments.of(Arrays.asList("rdf:Property"), true),
+                Arguments.of(Arrays.asList("rdf:Property", "rdfs:Class"), true),
+                Arguments.of(Arrays.asList("rdfs:Class"), false)
         );
     }
 }
